[package]
name = "hebo"
version = "0.2.3"
authors = ["Xu Shaohua <shaohua@biofan.org>"]
edition = "2021"
license = "AGPL-3.0-only"
description = "Distributed MQTT broker"
publish = false

[[bin]]
name = "hebo"
path = "src/bin/hebo.rs"

[[bin]]
name = "hebo-ctl"
path = "src/bin/hebo_ctl.rs"

[[bin]]
name = "hebo-passwd"
path = "src/bin/hebo_passwd.rs"

[features]
default = []

full = [
  "allocator",
]
allocator = ["jemallocator"]
mongodb_conn = ["mongodb"]
mysql_conn = ["mysql_async"]
pgsql_conn = ["tokio-postgres"]

[dependencies]
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "2.34.0"
codec = { path = "../codec" }
env_logger = "0.9.0"
futures = "0.3.18"
futures-util = "0.3.18"
http = "0.2.5"
jemallocator = { version = "0.3.2", optional = true }
log = "0.4.14"
log4rs = { version = "1.0.0", features = [ "background_rotation", "gzip" ] }
mongodb = { version = "2.0.2", optional = true }
mysql_async = { version = "0.28.1", optional = true }
nc = "0.7.13"
openssl = "0.10.38"
quinn = "0.8.0"
rand = "0.8.4"
redis = { version = "0.21.4", features = ["tokio-comp", "connection-manager"], optional = true }
rustls-pemfile = "0.2.1"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.14.0", features = ["full"] }
tokio-postgres = { version = "0.7.5", optional = true }
tokio-rustls = "0.23.1"
tokio-tungstenite = { version = "0.16.0", features = ["rustls"] }
toml = "0.5.8"
warp = "0.3.2"
webpki-roots = "0.22.1"

[dev-dependencies]
rcgen = "0.8.14"
subprocess = "0.2.8"
tokio-test = "0.4.2"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 2
panic = "abort"
