[package]
name = "hebo_codec"
version = "0.2.3"
authors = [
  "Xu Shaohua <shaohua@biofan.org>"
]
description = "Packet codec for MQTT protocol"
categories = [
  "concurrency",
  "network-programming",
]
keywords = [
  "broker",
  "codec",
  "hebo",
  "mqtt",
  "qos",
]
repository = "https://github.com/RustRobotics/hebo"
homepage = "https://github.com/RustRobotics/hebo/tree/main/codec"
license = "Apache-2.0"
edition = "2024"
readme = "./README.md"
rust-version = "1.88.0"
publish = true

[dependencies]
byteorder = "1.5.0"
bytes = "1.10.1"
log = "0.4.27"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
