[package]
name = "hebo"
version = "0.3.3"
authors = ["Xu Shaohua <shaohua@biofan.org>"]
description = "Distributed MQTT broker"
edition = "2021"
categories = [
  "concurrency",
  "network-programming",
]
keywords = [
  "broker",
  "hebo",
  "mqtt",
  "qos",
]
repository = "https://github.com/RustRobotics/hebo"
homepage = "https://github.com/RustRobotics/hebo"
license = "GPL-3.0-or-later"
readme = "./README.md"
rust-version = "1.66.0"
publish = true

[[bin]]
name = "hebo"
path = "src/bin/hebo.rs"

[features]
default = []

full = [
  "mongodb_conn",
  "mysql_conn",
  "pgsql_conn",
  "redis_conn",
]
mongodb_conn = ["mongodb"]
mysql_conn = ["mysql_async"]
pgsql_conn = ["tokio-postgres"]
redis_conn = ["redis"]
acl = []
dashboard = []
rule_engine = []

[dependencies]
base64 = "0.21.7"
clap = { version = "4.4.18", features = ["derive"] }
codec = { path = "../codec", package = "hebo_codec", version = "0.2.3" }
env_logger = "0.10.2"
futures = "0.3.30"
futures-util = "0.3.30"
http = "0.2.11"
jemallocator = { version = "0.5.4", optional = true }
log = "0.4.21"
log4rs = { version = "1.2.0", default-features = true, features = [ "all_components", "background_rotation", "gzip" ] }
mongodb = { version = "2.8.1", optional = true }
mysql_async = { version = "0.33.0", optional = true }
openssl = "0.10.64"
quinn = { version = "0.10.2", features = ["runtime-tokio"] }
rand = "0.8.5"
redis = { version = "0.23.3", features = ["tokio-comp", "connection-manager"], optional = true }
rustls-pemfile = "1.0.4"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", optional = true }
tokio-rustls = "0.24.1"
tokio-tungstenite = { version = "0.20.1", features = ["rustls"] }
toml = "0.8.9"
warp = "0.3.6"
webpki-roots = "0.25.4"

[target.'cfg(unix)'.dependencies]
nc = "0.8.19"
sysinfo = "0.29.11"

[dev-dependencies]
rcgen = "0.11.3"
ruo = { path = "../ruo", version = "0.1.2" }
tokio-test = "0.4.3"
