[package]
name = "hebo"
version = "0.3.3"
authors = ["Xu Shaohua <shaohua@biofan.org>"]
description = "Distributed MQTT broker"
edition = "2024"
categories = [
  "concurrency",
  "network-programming",
]
keywords = [
  "broker",
  "hebo",
  "mqtt",
  "qos",
]
repository = "https://github.com/RustRobotics/hebo"
homepage = "https://github.com/RustRobotics/hebo"
license = "Apache-2.0"
readme = "./README.md"
rust-version = "1.88.0"
publish = true

[[bin]]
name = "hebo"
path = "src/bin/hebo.rs"

[features]
default = []

full = [
  "mongodb_conn",
  "mysql_conn",
  "pgsql_conn",
  "redis_conn",
]
mongodb_conn = ["mongodb"]
mysql_conn = ["mysql_async"]
pgsql_conn = ["tokio-postgres"]
redis_conn = ["redis"]
acl = []
dashboard = []
rule_engine = []

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
codec = { path = "../codec", package = "hebo_codec", version = "0.2.3" }
env_logger = "0.11.9"
futures = "0.3.32"
futures-util = "0.3.32"
http = "1.4.0"
jemallocator = { version = "0.5.4", optional = true }
log = "0.4.29"
log4rs = { version = "1.4.0", default-features = true, features = [ "all_components", "background_rotation", "gzip" ] }
mongodb = { version = "3.5.1", optional = true }
mysql_async = { version = "0.36.1", optional = true }
quinn = { version = "0.11.9", features = ["runtime-tokio"] }
rand = "0.10.0"
redis = { version = "1.0.5", features = ["tokio-comp", "connection-manager"], optional = true }
rustls-pemfile = "2.2.0"
rustls-pki-types = { version = "1.14.0", features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tokio = { version = "1.50.0", features = ["full"] }
tokio-postgres = { version = "0.7.16", optional = true }
tokio-rustls = "0.26.4"
tokio-tungstenite = { version = "0.28.0", features = ["rustls"] }
toml = "1.0.6"
warp = "0.4.2"
webpki-roots = "1.0.6"

[target.'cfg(unix)'.dependencies]
nc = "0.9.7"
sysinfo = "0.38.4"

[dev-dependencies]
rcgen = "0.14.7"
ruo = { path = "../ruo", version = "0.1.2" }
tokio-test = "0.4.5"
