[package]
name = "ruo"
version = "0.1.2"
authors = [ "Xu Shaohua <shaohua@biofan.org>" ]
description = "MQTT client library for Rust"
categories = [
  "concurrency",
  "network-programming",
]
keywords = [
  "codec",
  "hebo",
  "mqtt",
  "qos",
  "ruo",
]
repository = "https://github.com/RustRobotics/hebo"
homepage = "https://github.com/RustRobotics/hebo/tree/main/ruo"
license = "Apache-2.0"
edition = "2024"
readme = "./README.md"
rust-version = "1.88.0"
publish = true

[features]
default = [ "blocking" ]
blocking = [ "tungstenite" ]

[dependencies]
byteorder = "1.5.0"
codec = { path = "../codec", package = "hebo_codec", version = "0.2.3" }
env_logger = "0.10.2"
futures = "0.3.30"
futures-util = "0.3.30"
log = "0.4.21"
quinn = "0.10.2"
rustls-pemfile = "1.0.4"
tokio = { version = "1.37.0", features = ["full"] }
tokio-rustls = "0.24.1"
tokio-tungstenite = { version = "0.20.1", features = ["rustls-tls-webpki-roots"] }
tungstenite = { version = "0.20.1", optional = true }
webpki-roots = "0.25.4"
