[package]
name = "ruo"
version = "0.1.2"
authors = [ "Xu Shaohua <shaohua@biofan.org>" ]
description = "MQTT client library for Rust"
categories = [
  "concurrency",
  "network-programming",
]
keywords = [
  "codec",
  "hebo",
  "mqtt",
  "qos",
  "ruo",
]
repository = "https://github.com/RustRobotics/hebo"
homepage = "https://github.com/RustRobotics/hebo/tree/main/ruo"
license = "Apache-2.0"
edition = "2024"
readme = "./README.md"
rust-version = "1.88.0"
publish = true

[features]
default = [ "blocking" ]
blocking = [ "tungstenite" ]

[dependencies]
byteorder = "1.5.0"
codec = { path = "../codec", package = "hebo_codec", version = "0.2.3" }
env_logger = "0.11.9"
futures = "0.3.32"
futures-util = "0.3.32"
log = "0.4.29"
quinn = "0.11.9"
rustls-pemfile = "2.2.0"
tokio = { version = "1.50.0", features = ["full"] }
tokio-rustls = "0.26.4"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
tungstenite = { version = "0.28.0", optional = true }
webpki-roots = "1.0.6"
