[package]
name = "hebo-ui-daemon"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
prost = "0.10.1"
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
tonic = "0.7.1"
protos = { path = "../protos" }
tonic-web = "0.3.0"
pretty_env_logger = "0.4.0"

[[bin]]
name = "hebo-ui-daemon"
path = "src/bin/main.rs"
