[package]
name = "hebo-web"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
grpc-web-client = { git = "https://github.com/HeboProject/grpc-web-client", rev = "0343bdb321" }
js-sys = { version = "0.3.57", default-features = false }
log = "0.4.16"
prost = { version = "0.10.0", default-features = false }
tonic = { version = "0.7.1", default-features = false, features = ["codegen", "prost"] }
wasm-bindgen = { version = "0.2.80", default-features = false, features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.30"
wasm-bindgen-test = { version = "0.3.30", default-features = false }
wasm-logger = "0.2.0"
web-sys = "0.3.57"
yew = "0.19.3"
yew-router = "0.16.0"

[build-dependencies]
tonic-build = { version = "0.7.0", default-features = false, features = ["prost"] }

